@@ -1,5 +1,6 @@
 Changes for 1.4.2:
 
+ - new trigger function iregexp(), non case-sensitive regexp (Alexei) 
  - fixed upgrade script to correctly process host-template linkage (Alexei)
  - fixed synchronisation of delete operation between nodes (Alexei)
  - fixed problem with libresolv under Solaris 8 (Alexei)
